@@ -1,5 +1,5 @@
 /*
- * "$Id: http.c,v 1.82.2.55 2004/07/06 00:35:31 mike Exp $"
+ * "$Id: http.c,v 1.82.2.56 2004/08/18 17:49:19 mike Exp $"
  *
  *   HTTP routines for the Common UNIX Printing System (CUPS).
  *
@@ -1724,7 +1724,16 @@ char *					/* O - Decoded string */
 httpDecode64(char       *out,		/* I - String to write to */
              const char *in)		/* I - String to read from */
 {
-  return (httpDecode64_2(out, in, 512));
+  int	outlen;				/* Output buffer length */
+
+
+ /*
+  * Use the old maximum buffer size for binary compatibility...
+  */
+
+  outlen = 512;
+
+  return (httpDecode64_2(out, &outlen, in));
 }
 
 
@@ -1732,10 +1741,10 @@ httpDecode64(char       *out,		/* I - String to write to */
  * 'httpDecode64_2()' - Base64-decode a string.
  */
 
-char *					/* O - Decoded string */
-httpDecode64_2(char       *out,		/* I - String to write to */
-               const char *in,		/* I - String to read from */
-	       int        outlen)	/* I - Size of output string */
+char *					/* O  - Decoded string */
+httpDecode64_2(char       *out,		/* I  - String to write to */
+	       int        *outlen,	/* IO - Size of output string */
+               const char *in)		/* I  - String to read from */
 {
   int	pos,				/* Bit position */
 	base64;				/* Value of this character */
@@ -1743,7 +1752,18 @@ httpDecode64_2(char       *out,		/* I - String to write to */
 	*outend;			/* End of output buffer */
 
 
-  for (outptr = out, outend = out + outlen - 1, pos = 0; *in != '\0'; in ++)
+ /*
+  * Range check input...
+  */
+
+  if (!out || !outlen || *outlen < 1 || !in || !*in)
+    return (NULL);
+
+ /*
+  * Convert from base-64 to bytes...
+  */
+
+  for (outptr = out, outend = out + *outlen - 1, pos = 0; *in != '\0'; in ++)
   {
    /*
     * Decode this character into a number from 0 to 63...
@@ -1800,8 +1820,10 @@ httpDecode64_2(char       *out,		/* I - String to write to */
   *outptr = '\0';
 
  /*
-  * Return the decoded string...
+  * Return the decoded string and size...
   */
+
+  *outlen = (int)(outptr - out);
 
   return (out);
 }
@@ -1815,7 +1837,7 @@ char *					/* O - Encoded string */
 httpEncode64(char       *out,		/* I - String to write to */
              const char *in)		/* I - String to read from */
 {
-  return (httpEncode64_2(out, in, 512));
+  return (httpEncode64_2(out, 512, in, strlen(in)));
 }
 
 
@@ -1825,8 +1847,9 @@ httpEncode64(char       *out,		/* I - String to write to */
 
 char *					/* O - Encoded string */
 httpEncode64_2(char       *out,		/* I - String to write to */
+	       int        outlen,	/* I - Size of output string */
                const char *in,		/* I - String to read from */
-	       int        outlen)	/* I - Size of output string */
+	       int        inlen)	/* I - Size of input string */
 {
   char		*outptr,		/* Output pointer */
 		*outend;		/* End of output buffer */
@@ -1839,19 +1862,31 @@ httpEncode64_2(char       *out,		/* I - String to write to */
   		};
 
 
-  for (outptr = out, outend = out + outlen - 1; *in != '\0'; in ++)
+ /*
+  * Range check input...
+  */
+
+  if (!out || outlen < 1 || !in || inlen < 1)
+    return (NULL);
+
+ /*
+  * Convert bytes to base-64...
+  */
+
+  for (outptr = out, outend = out + outlen - 1; inlen > 0; in ++, inlen --)
   {
    /*
     * Encode the up to 3 characters as 4 Base64 numbers...
     */
 
     if (outptr < outend)
-      *outptr ++ = base64[in[0] >> 2];
+      *outptr ++ = base64[(in[0] & 255) >> 2];
     if (outptr < outend)
-      *outptr ++ = base64[((in[0] << 4) | (in[1] >> 4)) & 63];
+      *outptr ++ = base64[(((in[0] & 255) << 4) | ((in[1] & 255) >> 4)) & 63];
 
     in ++;
-    if (*in == '\0')
+    inlen --;
+    if (inlen <= 0)
     {
       if (outptr < outend)
         *outptr ++ = '=';
@@ -1861,10 +1896,11 @@ httpEncode64_2(char       *out,		/* I - String to write to */
     }
 
     if (outptr < outend)
-      *outptr ++ = base64[((in[0] << 2) | (in[1] >> 6)) & 63];
+      *outptr ++ = base64[(((in[0] & 255) << 2) | ((in[1] & 255) >> 6)) & 63];
 
     in ++;
-    if (*in == '\0')
+    inlen --;
+    if (inlen <= 0)
     {
       if (outptr < outend)
         *outptr ++ = '=';
@@ -2522,5 +2558,5 @@ CDSAWriteFunc(SSLConnectionRef connection,	/* I  - SSL/TLS connection */
 
 
 /*
- * End of "$Id: http.c,v 1.82.2.55 2004/07/06 00:35:31 mike Exp $".
+ * End of "$Id: http.c,v 1.82.2.56 2004/08/18 17:49:19 mike Exp $".
  */
