@@ -1,5 +1,5 @@
 /*
- * "$Id: dirsvc.c,v 1.73.2.55 2004/07/28 14:19:09 mike Exp $"
+ * "$Id: dirsvc.c,v 1.73.2.56 2004/08/18 17:49:19 mike Exp $"
  *
  *   Directory services routines for the Common UNIX Printing System (CUPS).
  *
@@ -777,11 +777,11 @@ SendCUPSBrowse(printer_t *p)		/* I - Printer to send */
 	  * Only send to local interfaces...
 	  */
 
-	  if (!iface->is_local)
+	  if (!iface->is_local || !iface->port)
 	    continue;
 
-	  snprintf(packet, sizeof(packet), "%x %x ipp://%s/%s/%s%s \"%s\" \"%s\" \"%s\"\n",
-        	   type, p->state, iface->hostname,
+	  snprintf(packet, sizeof(packet), "%x %x ipp://%s:%d/%s/%s%s \"%s\" \"%s\" \"%s\"\n",
+        	   type, p->state, iface->hostname, iface->port,
 		   (p->type & CUPS_PRINTER_CLASS) ? "classes" : "printers",
 		   p->name, options, p->location ? p->location : "",
 		   p->info ? p->info : "",
@@ -818,8 +818,11 @@ SendCUPSBrowse(printer_t *p)		/* I - Printer to send */
         * Send to the named interface...
 	*/
 
-	snprintf(packet, sizeof(packet), "%x %x ipp://%s/%s/%s%s \"%s\" \"%s\" \"%s\"\n",
-        	 type, p->state, iface->hostname,
+        if (!iface->port)
+	  continue;
+
+	snprintf(packet, sizeof(packet), "%x %x ipp://%s:%d/%s/%s%s \"%s\" \"%s\" \"%s\"\n",
+        	 type, p->state, iface->hostname, iface->port,
 		 (p->type & CUPS_PRINTER_CLASS) ? "classes" : "printers",
 		 p->name, options, p->location ? p->location : "",
 		 p->info ? p->info : "",
@@ -2109,5 +2112,5 @@ UpdateSLPBrowse(void)
 
 
 /*
- * End of "$Id: dirsvc.c,v 1.73.2.55 2004/07/28 14:19:09 mike Exp $".
+ * End of "$Id: dirsvc.c,v 1.73.2.56 2004/08/18 17:49:19 mike Exp $".
  */
